[package]
name = "near-chain"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
actix.workspace = true
anyhow.workspace = true
borsh.workspace = true
bytesize.workspace = true
chrono.workspace = true
crossbeam-channel.workspace = true
easy-ext.workspace = true
enum-map.workspace = true
itertools.workspace = true
lru.workspace = true
more-asserts.workspace = true
num-rational.workspace = true
parking_lot.workspace = true
rand_chacha.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
strum.workspace = true
tempfile.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true

near-async.workspace = true
near-chain-configs = { workspace = true, features = [
    "test_genesis",
    "test_utils",
] }
near-chain-primitives.workspace = true
near-client-primitives.workspace = true
near-crypto.workspace = true
near-epoch-manager.workspace = true
near-network.workspace = true
near-o11y.workspace = true
near-performance-metrics.workspace = true
near-performance-metrics-macros.workspace = true
near-pool.workspace = true
near-primitives = { workspace = true, features = ["solomon", "rand"] }
near-store.workspace = true
node-runtime.workspace = true
near-parameters.workspace = true
near-vm-runner.workspace = true
near-schema-checker-lib.workspace = true

[dev-dependencies]
near-mainnet-res.workspace = true
near-primitives = { workspace = true, features = ["clock"] }
near-test-contracts.workspace = true
serde_json.workspace = true
primitive-types.workspace = true
insta.workspace = true
assert_matches.workspace = true

[features]
# if enabled, we assert in most situations that are impossible unless some byzantine behavior is observed.
byzantine_asserts = []
expensive_tests = []
test_features = [
    "near-vm-runner/test_features",
    "near-primitives/test_features",
    "near-store/test_features",
    "node-runtime/test_features",
]
shadow_chunk_validation = []

nightly = [
    "near-async/nightly",
    "near-chain-configs/nightly",
    "near-client-primitives/nightly",
    "near-epoch-manager/nightly",
    "near-mainnet-res/nightly",
    "near-network/nightly",
    "near-o11y/nightly",
    "near-parameters/nightly",
    "near-pool/nightly",
    "near-primitives/nightly",
    "near-store/nightly",
    "near-vm-runner/nightly",
    "node-runtime/nightly",
]
sandbox = ["near-o11y/sandbox", "near-primitives/sandbox"]
protocol_schema = [
    "near-schema-checker-lib/protocol_schema",
    "near-crypto/protocol_schema",
    "near-parameters/protocol_schema",
    "near-primitives/protocol_schema",
    "near-store/protocol_schema",
    "near-epoch-manager/protocol_schema",
]

[package.metadata.cargo-machete]
ignored = ["near-performance-metrics"]
