[package]
name = "near-chunks-primitives"
version = "0.0.0"
authors.workspace = true
publish = true
# Please update rust-toolchain.toml as well when changing version here:
rust-version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/near/nearcore"
description = "This crate hosts NEAR chunks-related error types"

[dependencies]
near-chain-primitives = { path = "../chain-primitives" }
near-primitives = { path = "../../core/primitives" }
