[package]
name = "near-chunks-primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "This crate hosts NEAR chunks-related error types"
repository.workspace = true
license.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
near-chain-primitives.workspace = true
near-primitives.workspace = true
