[package]
name = "near-chunks"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
actix.workspace = true
borsh.workspace = true
chrono.workspace = true
derive_more.workspace = true
derive-enum-from-into.workspace = true
futures.workspace = true
lru.workspace = true
once_cell.workspace = true
rand.workspace = true
reed-solomon-erasure.workspace = true
time.workspace = true
tracing.workspace = true

near-async.workspace = true
near-chain-configs.workspace = true
near-crypto.workspace = true
near-epoch-manager.workspace = true
near-primitives.workspace = true
near-chunks-primitives.workspace = true
near-store.workspace = true
near-network.workspace = true
near-o11y.workspace = true
near-chain.workspace = true
near-pool.workspace = true
near-performance-metrics.workspace = true

[dev-dependencies]
assert_matches.workspace = true

[features]
nightly_protocol = [
  "near-async/nightly_protocol",
  "near-chain-configs/nightly_protocol",
  "near-chain/nightly_protocol",
  "near-epoch-manager/nightly_protocol",
  "near-network/nightly_protocol",
  "near-o11y/nightly_protocol",
  "near-pool/nightly_protocol",
  "near-primitives/nightly_protocol",
  "near-store/nightly_protocol",
]
nightly = [
  "nightly_protocol",
  "near-async/nightly",
  "near-chain-configs/nightly",
  "near-chain/nightly",
  "near-epoch-manager/nightly",
  "near-network/nightly",
  "near-o11y/nightly",
  "near-pool/nightly",
  "near-primitives/nightly",
  "near-store/nightly",
]
byzantine_asserts = ["near-chain/byzantine_asserts"]
expensive_tests = []
test_features = []
