[package]
name = "near-chunks"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
actix.workspace = true
lru.workspace = true
parking_lot.workspace = true
rand.workspace = true
reed-solomon-erasure.workspace = true
strum.workspace = true
time.workspace = true
tracing.workspace = true
# itertools has collect_vec which is useful in quick debugging prints
itertools.workspace = true

near-async.workspace = true
near-chain-configs.workspace = true
near-crypto.workspace = true
near-epoch-manager.workspace = true
near-primitives.workspace = true
near-chunks-primitives.workspace = true
near-store.workspace = true
near-network.workspace = true
near-o11y.workspace = true
near-chain.workspace = true
near-pool.workspace = true
near-performance-metrics.workspace = true
near-performance-metrics-macros.workspace = true

[dev-dependencies]
assert_matches.workspace = true

[features]
nightly = [
    "near-async/nightly",
    "near-chain-configs/nightly",
    "near-chain/nightly",
    "near-epoch-manager/nightly",
    "near-network/nightly",
    "near-o11y/nightly",
    "near-pool/nightly",
    "near-primitives/nightly",
    "near-store/nightly",
]
byzantine_asserts = ["near-chain/byzantine_asserts"]
expensive_tests = []
test_features = []

[package.metadata.cargo-machete]
ignored = ["near-performance-metrics"]
