[package]
name = "near-client-primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "This crate hosts NEAR client-related error types"
repository.workspace = true
license.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
actix.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
tracing.workspace = true

near-time.workspace = true
near-chain-primitives.workspace = true
near-chain-configs.workspace = true
near-chunks-primitives.workspace = true
near-crypto.workspace = true
near-primitives.workspace = true

[features]
nightly = [
  "near-chain-configs/nightly",
  "near-primitives/nightly",
]
sandbox = []
test_features = ["near-primitives/test_features"]
