[package]
name = "near-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
actix-rt.workspace = true
actix.workspace = true
anyhow.workspace = true
async-trait.workspace = true
borsh.workspace = true
bytesize.workspace = true
chrono.workspace = true
cloud-storage.workspace = true
derive_more.workspace = true
futures.workspace = true
itertools.workspace = true
lru.workspace = true
num-rational.workspace = true
once_cell.workspace = true
percent-encoding.workspace = true
rand.workspace = true
rayon.workspace = true
reed-solomon-erasure.workspace = true
regex.workspace = true
reqwest.workspace = true
rust-s3.workspace = true
serde_json.workspace = true
serde.workspace = true
strum.workspace = true
sysinfo.workspace = true
tempfile.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
yansi.workspace = true

near-async.workspace = true
near-cache.workspace = true
near-chain-configs.workspace = true
near-chain-primitives.workspace = true
near-chain.workspace = true
near-chunks.workspace = true
near-client-primitives.workspace = true
near-crypto.workspace = true
near-dyn-configs.workspace = true
near-epoch-manager.workspace = true
near-network.workspace = true
near-o11y.workspace = true
near-parameters.workspace = true
near-performance-metrics-macros.workspace = true
near-performance-metrics.workspace = true
near-pool.workspace = true
near-primitives = { workspace = true, features = ["clock"] }
near-primitives-core.workspace = true
near-store.workspace = true
near-telemetry.workspace = true
near-vm-runner.workspace = true

[dev-dependencies]
assert_matches.workspace = true
near-primitives = { workspace = true, features = ["clock", "solomon", "rand"] }
near-actix-test-utils.workspace = true

[features]
# if enabled, we assert in most situations that are impossible unless some byzantine behavior is observed.
byzantine_asserts = ["near-chain/byzantine_asserts"]
shadow_chunk_validation = ["near-chain/shadow_chunk_validation"]
expensive_tests = []
test_features = [
  "near-network/test_features",
  "near-chain/test_features",
  "near-chunks/test_features",
  "near-primitives/test_features",
  "near-vm-runner/test_features",
]
nightly_protocol = [
  "near-actix-test-utils/nightly_protocol",
  "near-async/nightly_protocol",
  "near-chain-configs/nightly_protocol",
  "near-chain/nightly_protocol",
  "near-chunks/nightly_protocol",
  "near-client-primitives/nightly_protocol",
  "near-dyn-configs/nightly_protocol",
  "near-epoch-manager/nightly_protocol",
  "near-network/nightly_protocol",
  "near-o11y/nightly_protocol",
  "near-parameters/nightly_protocol",
  "near-pool/nightly_protocol",
  "near-primitives/nightly_protocol",
  "near-store/nightly_protocol",
  "near-telemetry/nightly_protocol",
  "near-vm-runner/nightly_protocol",
]
nightly = [
  "near-actix-test-utils/nightly",
  "near-async/nightly",
  "near-chain-configs/nightly",
  "near-chain/nightly",
  "near-chunks/nightly",
  "near-client-primitives/nightly",
  "near-dyn-configs/nightly",
  "near-epoch-manager/nightly",
  "near-network/nightly",
  "near-o11y/nightly",
  "near-parameters/nightly",
  "near-pool/nightly",
  "near-primitives/nightly",
  "near-store/nightly",
  "near-telemetry/nightly",
  "near-vm-runner/nightly",
  "nightly_protocol",
]
sandbox = [
  "near-client-primitives/sandbox",
  "near-chain/sandbox",
  "near-o11y/sandbox",
]
new_epoch_sync = ["near-chain/new_epoch_sync"]
statelessnet_protocol = ["near-chain/statelessnet_protocol"]
