[package]
name = "consensus"
version = "0.0.1"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[dependencies]
typed-arena = "1.4.1"
futures = "0.1.25"
tokio = "0.1"
rand = "0.6"
chrono = "0.4.6"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"

network = { path = "../network" }
beacon = { path = "../../chain/beacon" }
client = { path = "../../chain/client" }
primitives = { path = "../../runtime/primitives" }
chain = { path = "../../chain/chain" }
coroutines = { path = "../coroutines" }
nightshade = { path = "../../chain/nightshade" }
mempool = { path = "../../chain/mempool" }
tokio-utils = { path = "../tokio-utils" }
