[package]
name = "coroutines"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4"
futures = "0.1.25"
tokio = "0.1.11"
rand = "0.6"
rand_xorshift = "0.1"

beacon = { path = "../../chain/beacon" }
shard = { path = "../../chain/shard" }
chain = { path = "../../chain/chain" }
client = { path = "../../chain/client" }
primitives = { path = "../../runtime/primitives" }
nightshade = { path = "../../chain/nightshade" }
mempool = { path = "../../chain/mempool" }
tokio-utils = { path = "../tokio-utils" }
