[package]
name = "near-epoch-manager"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
borsh.workspace = true
num-bigint.workspace = true
num-rational.workspace = true
parking_lot.workspace = true
primitive-types.workspace = true
rand.workspace = true
rand_hc.workspace = true
serde.workspace = true
tracing.workspace = true
# itertools has collect_vec which is useful in quick debugging prints
itertools.workspace = true

near-o11y.workspace = true
near-crypto.workspace = true
near-primitives.workspace = true
near-store.workspace = true
near-chain-configs.workspace = true
near-chain-primitives.workspace = true
near-cache.workspace = true
near-schema-checker-lib.workspace = true

[dev-dependencies]
near-chain-configs = { workspace = true, features = ["test_genesis"] }

[features]
default = ["near-primitives/rand"]
expensive_tests = []
nightly = [
    "near-chain-configs/nightly",
    "near-o11y/nightly",
    "near-primitives/nightly",
    "near-store/nightly",
]
protocol_schema = [
    "near-schema-checker-lib/protocol_schema",
    "near-crypto/protocol_schema",
    "near-primitives/protocol_schema",
    "near-store/protocol_schema",
]
