[package]
name = "near-epoch-manager"
version = "0.0.1"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"


[dependencies]
# Changing this version will lead to change to the protocol, as will change how validators get shuffled.
protocol_defining_rand = { package = "rand", version = "0.6.5", default-features = false }
log = "0.4"
cached = "0.12"
borsh = "0.6.1"
rand = "0.7"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
primitive-types = { version = "0.7", default-features = false }
num-rational = "0.2.4"

near-crypto = { path = "../../core/crypto" }
near-primitives = { path = "../../core/primitives" }
near-chain = { path = "../chain" }
near-store = { path = "../../core/store" }

[features]
expensive_tests = []
