[package]
name = "near-epoch-manager"
version = "0.0.1"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"


[dependencies]
# Changing this version will lead to change to the protocol, as will change how validators get shuffled.
protocol_defining_rand = { package = "rand", version = "0.6.5", default-features = false }
log = "0.4"
cached = "0.23"
borsh = "0.8.1"
rand = "0.7"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
smart-default = "0.6"
primitive-types = "0.9"
num-rational = "0.3"
chrono = { version = "0.4.4", optional = true}

near-crypto = { path = "../../core/crypto" }
near-primitives = { path = "../../core/primitives" }
near-chain = { path = "../chain" }
near-store = { path = "../../core/store" }
near-chain-configs = { path = "../../core/chain-configs" }

[features]
expensive_tests = []
protocol_feature_block_header_v3 = ["near-primitives/protocol_feature_block_header_v3"]
nightly_protocol_features = ["nightly_protocol", "near-primitives/nightly_protocol_features", "protocol_feature_block_header_v3"]
nightly_protocol = ["near-primitives/nightly_protocol"]
