[package]
name = "near-indexer-primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "This crate hosts structures for the NEAR Indexer Framework types"
repository.workspace = true
license.workspace = true
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true

near-primitives.workspace = true

[features]
nightly = [
  "nightly_protocol",
  "near-primitives/nightly",
]
nightly_protocol = [
  "near-primitives/nightly_protocol",
]
