[package]
name = "near-indexer-primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "This crate hosts structures for the NEAR Indexer Framework types"
repository.workspace = true
license.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
serde.workspace = true

near-primitives.workspace = true

[features]
nightly = [
  "near-primitives/nightly",
]
